# physics_simulator

./: .gitignore  main.py  pyproject.toml  setup.py
src/shapes/: __init__.py  box.py  circle.py
src/utils/: utils.py
