[project]
name = "physics_simulator"
version = "0.0.1"
authors = [
  { name="Navazdeen", email="navazdeen.s@gmail.com" },
]
description = "A package for simulating physics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"